--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .image-box {
     width: 100%;
     display: flex;
-    justify-content: center; /* Push image to right */
+    justify-content: center; 
     padding-top: 40px; 
     gap:20px
 }
